--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   },
   "devDependencies": {},
   "dependencies": {
-    "@strapi/strapi": "4.12.6",
-    "@strapi/plugin-users-permissions": "4.12.6",
     "@strapi/plugin-i18n": "4.12.6",
-    "pg": "8.8.0"
+    "@strapi/plugin-users-permissions": "4.12.6",
+    "@strapi/strapi": "4.12.6",
+    "pg": "8.8.0",
+    "strapi-plugin-ckeditor5": "^2.1.1-rc.1"
   },
   "author": {
     "name": "A Strapi developer"
