--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@strapi/plugin-users-permissions": "4.12.6",
     "@strapi/strapi": "4.12.6",
     "pg": "8.8.0",
-    "strapi-plugin-ckeditor5": "^2.1.1-rc.1"
+    "strapi-plugin-ckeditor5": "^2.1.1-rc.1",
+    "strapi-plugin-populate-deep": "^3.0.0"
   },
   "author": {
     "name": "A Strapi developer"
