--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   },
   "devDependencies": {},
   "dependencies": {
-    "@strapi/plugin-i18n": "4.12.6",
-    "@strapi/plugin-users-permissions": "4.12.6",
-    "@strapi/strapi": "4.12.6",
+    "@strapi/plugin-graphql": "4.12.4",
+    "@strapi/plugin-i18n": "4.13.1",
+    "@strapi/plugin-users-permissions": "4.13.1",
+    "@strapi/strapi": "4.13.1",
     "pg": "8.8.0",
     "strapi-plugin-ckeditor5": "^2.1.1-rc.1",
     "strapi-plugin-populate-deep": "^3.0.0"
